# rust-parser

./: Cargo.toml  readme.md
src/: inclusion.rs  main.rs  mqtt.rs  nom_app.rs  pest_app.rs  transaction.rs  trip.rs  weather.rs  winnow_app.rs
src/grammar/: csv.pest  ini.pest  recipe.pest  transaction.pest
src/transactions/: eur.trn  gbp.trn  hybrid.trn  rmb.trn  usd.trn
src/with_nom/: byts.rs  iot.rs  mod.rs  section.rs  transaction.rs  trip.rs  weather.rs  zjkg.rs
src/with_nom/iot-cli/: Cargo.toml
src/with_nom/iot-cli/src/: main.rs
src/with_nom/iot-parser/: Cargo.toml
src/with_nom/iot-parser/src/: lib.rs
src/with_nom/log-byts/: Cargo.toml
src/with_nom/log-byts/src/: lib.rs
src/with_nom/log-zjkg/: Cargo.toml
src/with_nom/log-zjkg/src/: lib.rs
src/with_nom/trans/: Cargo.toml
src/with_nom/trans-parser/: Cargo.toml
src/with_nom/trans-parser/src/: lib.rs  parser.rs
src/with_nom/trans/src/: main.rs
src/with_nom/trip-cli/: Cargo.toml
src/with_nom/trip-cli/src/: main.rs
src/with_nom/trip-lang/: Cargo.toml
src/with_nom/trip-lang/src/: lib.rs
src/with_nom/weather-cli/: Cargo.toml
src/with_nom/weather-cli/src/: main.rs
src/with_nom/weather-lang/: Cargo.toml
src/with_nom/weather-lang/src/: lib.rs
src/with_pest/: csv_app.rs  ini_app.rs  transaction_app.rs
src/with_pest/csv-cli/: Cargo.toml
src/with_pest/csv-cli/src/: main.rs
src/with_pest/ini-cli/: Cargo.toml
src/with_pest/ini-cli/src/: main.rs
src/with_pest/recipe-lang/: Cargo.toml
src/with_pest/recipe-lang/src/: lib.rs  parser.rs  token.rs
src/with_pest/recp-cli/: Cargo.toml
src/with_pest/recp-cli/src/: main.rs  recipe.rs
src/with_pest/trans-cli/: Cargo.toml
src/with_pest/trans-cli/src/: main.rs
src/with_pest/transaction-lang/: Cargo.toml
src/with_pest/transaction-lang/src/: lib.rs  parser.rs  token.rs
src/with_winnow/: http.rs  iot_log.rs  mod.rs  transaction.rs  trip.rs  weather.rs
src/with_winnow/http-parser/: Cargo.toml
src/with_winnow/http-parser/src/: lib.rs  parser.rs  token.rs
src/with_winnow/log/: Cargo.toml
src/with_winnow/log-parser/: Cargo.toml
src/with_winnow/log-parser/src/: lib.rs  parser.rs  token.rs
src/with_winnow/log/src/: main.rs
src/with_winnow/recipe-parser/: Cargo.toml
src/with_winnow/recipe-parser/src/: parser.rs
src/with_winnow/recp/: Cargo.toml
src/with_winnow/transaction/: Cargo.toml
src/with_winnow/transaction-parser/: Cargo.toml
src/with_winnow/transaction-parser/src/: lib.rs  parser.rs  token.rs
src/with_winnow/transaction/src/: main.rs
src/with_winnow/trip/: Cargo.toml
src/with_winnow/trip-parser/: Cargo.toml
src/with_winnow/trip-parser/src/: lib.rs  parser.rs  token.rs
src/with_winnow/trip/src/: main.rs
src/with_winnow/weather/: Cargo.toml
src/with_winnow/weather-parser/: Cargo.toml
src/with_winnow/weather-parser/src/: lib.rs  parser.rs  token.rs
src/with_winnow/weather/src/: main.rs
src/with_winnow/winnowcurl/: Cargo.toml
src/with_winnow/winnowcurl/src/: main.rs
src/with_winnow/winnowcurl/src/curl/: mod.rs  parser.rs
src/with_winnow/winnowcurl/src/url/: parser.rs
src/with_winnow/winnowcurl/tests/: curl_command_integration_test.rs
