[package]
name = "rparser"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
hex = "0.4.3"
nom = "7.1.3"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.116"
winnow = "0.7"
clap = { version = "4.5.16", features = ["derive"] }
num = { version = "0.4.3", features = ["num-bigint"] }
pest = "2.8.3"
pest_derive = "2.8.3"
Inflector = "0.11.4"
console = "0.15.7"
tabwriter = "1.2.1"

[dev-dependencies]
rstest = "0.24.0"
serde_json = "1.0"

[[bin]]
name = "nom_app"
path = "src/nom_app.rs"

[[bin]]
name = "winnow_app"
path = "src/winnow_app.rs"

[[bin]]
name = "inclusion"
path = "src/inclusion.rs"

[[bin]]
name = "mqtt"
path = "src/mqtt.rs"

[[bin]]
name = "transaction_app"
path = "src/with_pest/transaction_app.rs"

[[bin]]
name = "csv_app"
path = "src/with_pest/csv_app.rs"

[[bin]]
name = "ini_app"
path = "src/with_pest/ini_app.rs"

[lib]
name = "recipe_parser"
path = "src/with_winnow/recipe-parser/src/lib.rs"

[[bin]]
name = "recipe-parser"
path = "src/with_winnow/recp/src/main.rs"

[[bin]]
name = "winnowcurl"
path = "src/with_winnow/winnowcurl/src/main.rs"
