[workspace]
members = [
    "src/with_nom/iot-cli",
    "src/with_nom/iot-log-parser",
    "src/with_nom/iot-parser",
    "src/with_nom/log-byts",
    "src/with_nom/log-zjkg",
    "src/with_nom/trans",
    "src/with_nom/trans-parser",
    "src/with_nom/trip-cli",
    "src/with_nom/trip-lang",
    "src/with_nom/weather-cli",
    "src/with_nom/weather-lang",
    "src/with_pest/csv-cli",
    "src/with_pest/ini-cli",
    "src/with_pest/recipe-lang",
    "src/with_pest/recp-cli",
    "src/with_pest/trans-cli",
    "src/with_pest/transaction-lang",
    "src/with_winnow/http-parser",
    "src/with_winnow/log",
    "src/with_winnow/log-parser",
    "src/with_winnow/recipe-parser",
    "src/with_winnow/recp",
    "src/with_winnow/transaction",
    "src/with_winnow/trip",
    "src/with_winnow/trip-parser",
    "src/with_winnow/weather",
    "src/with_winnow/weather-parser",
    "src/with_winnow/winnowcurl",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Rust parser examples"
keywords = ["parser", "nom", "winnow", "pest"]
repository = "https://github.com/ohmycloud/rust-parser"
readme = "README.md"
homepage = "https://github.com/ohmycloud/rust-parser"

[package]
name = "rparser"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
hex = "0.4.3"
nom = "7.1.3"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.116"
winnow ={ version = "1.0.0", features = ["parser"] }
clap = { version = "4.5.16", features = ["derive"] }
num = { version = "0.4.3", features = ["num-bigint"] }
pest = "2.8.6"
pest_derive = "2.8.6"
Inflector = "0.11.4"
console = "0.15.7"
tabwriter = "1.2.1"

[dev-dependencies]
rstest = "0.24.0"
serde_json = "1.0"

[[bin]]
name = "inclusion"
path = "src/inclusion.rs"
