[package]
name = "log-byts"
version.workspace = true
edition.workspace = true
description.workspace = true
keywords.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true

[dependencies]
nom = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
