[package]
name = "recp-cli"
description = "A cli utility to display recipes in recipe-lang"
version = { workspace = true }
edition = { workspace = true }
# license = { workspace = true }
license = "MIT"
repository = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
categories = ["command-line-utilities"]

[dependencies]
Inflector = "0.11.4"
clap = { version = "4.3.1", features = ["derive"] }
recipe-lang = { path = "../recipe-lang", version = "0.1.0" }
console = "0.15.7"
tabwriter = "1.2.1"
