[package]
name = "transaction"
version.workspace = true
edition.workspace = true
description.workspace = true
keywords.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true

[dependencies]
winnow = { version = "1.0.0", features = ["parser"] }
transaction-parser = { path = "../transaction-parser", version = "0.1.0" }
