[package]
name = "trip"
version.workspace = true
edition.workspace = true
description.workspace = true
keywords.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true

[dependencies]
winnow = { version = "1.0.0", features = ["parser"] }
trip-parser = { path = "../trip-parser", version = "0.1.0" }
